@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - use request_uri instead of script_name to determine own url
 
 0.013  2018-03-07 10:03:34 CET
   - remove dependency Catmandu
